@@ -1,0 +1,121 @@
+/*
+ * This file is part of Grocy Android.
+ *
+ * Grocy Android is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Grocy Android is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Grocy Android. If not, see http://www.gnu.org/licenses/.
+ *
+ * Copyright (c) 2020-2022 by Patrick Zedler and Dominic Zedler
+ */
+
+package xyz.zedler.patrick.grocy.fragment.bottomSheetDialog;
+
+import android.content.DialogInterface;
+import android.os.Bundle;
+import android.view.LayoutInflater;
+import android.view.View;
+import android.view.ViewGroup;
+import androidx.annotation.NonNull;
+import androidx.recyclerview.widget.DefaultItemAnimator;
+import androidx.recyclerview.widget.LinearLayoutManager;
+import java.util.ArrayList;
+import xyz.zedler.patrick.grocy.Constants.ARGUMENT;
+import xyz.zedler.patrick.grocy.R;
+import xyz.zedler.patrick.grocy.activity.MainActivity;
+import xyz.zedler.patrick.grocy.adapter.ProductAdapter;
+import xyz.zedler.patrick.grocy.databinding.FragmentBottomsheetListSelectionBinding;
+import xyz.zedler.patrick.grocy.model.Product;
+import xyz.zedler.patrick.grocy.util.SortUtil;
+import xyz.zedler.patrick.grocy.util.UiUtil;
+import xyz.zedler.patrick.grocy.util.ViewUtil;
+
+public class ProductsBottomSheet extends BaseBottomSheetDialogFragment
+    implements ProductAdapter.ProductAdapterListener {
+
+  private final static String TAG = ProductsBottomSheet.class.getSimpleName();
+
+  private FragmentBottomsheetListSelectionBinding binding;
+  private MainActivity activity;
+  private ArrayList<Product> products;
+
+  @Override
+  public View onCreateView(
+      @NonNull LayoutInflater inflater,
+      ViewGroup container,
+      Bundle savedInstanceState
+  ) {
+    binding = FragmentBottomsheetListSelectionBinding.inflate(
+        inflater, container, false
+    );
+
+    activity = (MainActivity) requireActivity();
+    Bundle bundle = requireArguments();
+
+    ArrayList<Product> productsArg = bundle.getParcelableArrayList(ARGUMENT.PRODUCTS);
+    assert productsArg != null;
+    products = new ArrayList<>(productsArg);
+
+    SortUtil.sortProductsByName(products, true);
+    int selected = bundle.getInt(ARGUMENT.SELECTED_ID, -1);
+
+    binding.textListSelectionTitle.setText(activity.getString(R.string.property_products));
+    ViewUtil.centerTextOnLargeScreens(binding.textListSelectionTitle);
+
+    binding.recyclerListSelection.setLayoutManager(
+        new LinearLayoutManager(
+            activity,
+            LinearLayoutManager.VERTICAL,
+            false
+        )
+    );
+    binding.recyclerListSelection.setItemAnimator(new DefaultItemAnimator());
+    binding.recyclerListSelection.setAdapter(
+        new ProductAdapter(products, selected, this)
+    );
+
+    return binding.getRoot();
+  }
+
+  @Override
+  public void onDestroy() {
+    super.onDestroy();
+    binding = null;
+  }
+
+  @Override
+  public void onItemRowClicked(int position) {
+    activity.getCurrentFragment().selectProduct(products.get(position));
+    dismiss();
+  }
+
+  @Override
+  public void onDismiss(@NonNull DialogInterface dialog) {
+    activity.getCurrentFragment().onBottomSheetDismissed();
+    super.onDismiss(dialog);
+  }
+
+  @Override
+  public void applyBottomInset(int bottom) {
+    binding.recyclerListSelection.setPadding(
+        binding.recyclerListSelection.getPaddingLeft(),
+        binding.recyclerListSelection.getPaddingTop(),
+        binding.recyclerListSelection.getPaddingRight(),
+        UiUtil.dpToPx(activity, 8) + bottom
+    );
+  }
+
+  @NonNull
+  @Override
+  public String toString() {
+    return TAG;
+  }
+}
