@@ -44,6 +44,7 @@ import xyz.zedler.patrick.grocy.fragment.PurchaseFragmentArgs;
 import xyz.zedler.patrick.grocy.fragment.bottomSheetDialog.DateBottomSheet;
 import xyz.zedler.patrick.grocy.fragment.bottomSheetDialog.InputProductBottomSheet;
 import xyz.zedler.patrick.grocy.fragment.bottomSheetDialog.LocationsBottomSheet;
+import xyz.zedler.patrick.grocy.fragment.bottomSheetDialog.ProductsBottomSheet;
 import xyz.zedler.patrick.grocy.fragment.bottomSheetDialog.QuantityUnitsBottomSheet;
 import xyz.zedler.patrick.grocy.fragment.bottomSheetDialog.QuickModeConfirmBottomSheet;
 import xyz.zedler.patrick.grocy.fragment.bottomSheetDialog.StoresBottomSheet;
@@ -176,7 +177,7 @@ public class PurchaseViewModel extends BaseViewModel {
       this.products = data.getProducts();
       this.pendingProducts = data.getPendingProducts();
       formData.getProductsLive().setValue(
-              appendPendingProducts(Product.getActiveAndStockEnabledProductsOnly(products), pendingProducts)
+              appendPendingProducts(Product.getActiveProductsOnly(products), pendingProducts)
       );
       productHashMap = ArrayUtil.getProductsHashMap(products);
       this.pendingProductBarcodes = data.getPendingProductBarcodes();
@@ -215,7 +216,7 @@ public class PurchaseViewModel extends BaseViewModel {
           this.products = products;
           productHashMap = ArrayUtil.getProductsHashMap(products);
           formData.getProductsLive().setValue(
-                  appendPendingProducts(Product.getActiveAndStockEnabledProductsOnly(products), pendingProducts)
+                  appendPendingProducts(Product.getActiveProductsOnly(products), pendingProducts)
           );
         }), dlHelper.updateQuantityUnitConversions(dbChangedTime, conversions -> {
           this.unitConversions = conversions;
@@ -297,6 +298,12 @@ public class PurchaseViewModel extends BaseViewModel {
 
     DownloadHelper.OnProductDetailsResponseListener listener = productDetails -> {
       Product updatedProduct = productDetails.getProduct();
+
+      if (updatedProduct.getNoOwnStockBoolean()) {
+        showProductChildrenBottomSheet(updatedProduct);
+        return;
+      }
+
       formData.getProductDetailsLive().setValue(productDetails);
       formData.getProductNameLive().setValue(updatedProduct.getName());
 
@@ -951,6 +958,18 @@ public class PurchaseViewModel extends BaseViewModel {
             : -1
     );
     showBottomSheet(new LocationsBottomSheet(), bundle);
+  }
+
+  public void showProductChildrenBottomSheet(Product parentProduct) {
+    ArrayList<Product> childrenProducts = Product.getProductChildren(products, parentProduct.getId());
+    if (childrenProducts.isEmpty()) {
+      showMessage(R.string.error_no_children);
+      return;
+    }
+    Bundle bundle = new Bundle();
+    bundle.putParcelableArrayList(ARGUMENT.PRODUCTS, childrenProducts);
+    bundle.putInt(Constants.ARGUMENT.SELECTED_ID, -1);
+    showBottomSheet(new ProductsBottomSheet(), bundle);
   }
 
   public void showConfirmationBottomSheet() {
